2010-03-22  Jay Campan  <jcampan@google.com>

Reviewed by Darin Fisher.

        Making Chromium select popups not steal activation from the browser.
        Select popups are now like autocomplete popups, shown in non-activated
        windows.
        https://bugs.webkit.org/show_bug.cgi?id=36062

        * page/chromium/ChromeClientChromium.h:
        * platform/chromium/PopupMenuChromium.cpp:
        (WebCore::):
        (WebCore::PopupContainer::create):
        (WebCore::PopupContainer::PopupContainer):
        (WebCore::PopupContainer::~PopupContainer):
        (WebCore::PopupContainer::showPopup):
        (WebCore::PopupContainer::showExternal):
        (WebCore::PopupContainer::hidePopup):
        (WebCore::PopupMenu::show):
        * platform/chromium/PopupMenuChromium.h:
        (WebCore::PopupContainer::):
        (WebCore::PopupContainer::popupType):
2010-03-22  Jay Campan  <jcampan@google.com>

        Reviewed by Darin Fisher.

        Making Chromium select popups not steal activation from the browser.
        Select popups are now like autocomplete popups, shown in non-activated
        windows.
        https://bugs.webkit.org/show_bug.cgi?id=36062

        * public/WebViewClient.h:
        (WebKit::WebViewClient::createPopupMenu):
        * src/ChromeClientImpl.cpp:
        (WebKit::ChromeClientImpl::popupOpened):
        (WebKit::ChromeClientImpl::popupClosed):
        * src/ChromeClientImpl.h:
        * src/WebViewImpl.cpp:
        (WebKit::):
        (WebKit::WebViewImpl::mouseDown):
        (WebKit::WebViewImpl::keyEvent):
        (WebKit::WebViewImpl::selectPopupHandleKeyEvent):
        (WebKit::WebViewImpl::hideSelectPopup):
        (WebKit::WebViewImpl::popupOpened):
        (WebKit::WebViewImpl::popupClosed):
        (WebKit::WebViewImpl::setFocus):
        (WebKit::WebViewImpl::applyAutoFillSuggestions):
        (WebKit::WebViewImpl::applyAutocompleteSuggestions):
        * src/WebViewImpl.h:

Canonical link: https://commits.webkit.org/47670@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56376 268f45cc-cd09-0410-ab3c-d52691b4dbfc